# django-poetry-opinionated-cookiecutter

./: .gitignore  CHANGELOG.md  Procfile  README.md  cookiecutter.json
.github/: dependabot.yml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  AGENTS.md  CLAUDE.md  KNOWLEDGEBASE.md  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  runtime.txt
{{cookiecutter.project_name}}/.cursor/rules/: DRF.mdc  configuration.mdc  django-admin-best-practices.mdc  documentation.mdc  python-standards.mdc
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/ecs/: Dockerfile  buildspec.yml  nginx.conf
{{cookiecutter.project_name}}/nginx_compose/: nginx.conf
{{cookiecutter.project_name}}/{{cookiecutter.__project_slug}}/: asgi.py  locator.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name|replace('-','_')}}/: asgi.py  docker-compose.yml  middleware.py  settings.py  urls.py  views.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name|replace('-','_')}}/nginx_compose/: nginx.conf
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: asgi.py  docker-compose.yml  locator.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/nginx_compose/: nginx.conf
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: asgi.py  middleware.py
