[tool.poetry]
name = "{{cookiecutter.project_name|replace('_','-')}}"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">={{cookiecutter.python_version}},<{{cookiecutter.__max_python_version}}"
Django = "^5.2"
django-configurations = "^2.5.1"
dj-database-url = "^2.3.0"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
django-extensions = "^4.1"
django-import-export = "^4.3.9"
django-storages = "^1.14.6"
Pillow = "^11.2.1"
django-cors-headers = "^4.7.0"
django-querycount = "^0.8.3"
gunicorn = "^23.0.0"
djangorestframework-simplejwt = "^5.5.0"
psycopg = "^3.2.9"
drf-nested-routers = "^0.94.1"
drf-spectacular = "^0.28.0"
boto3 = ">=1.39.17"

{%  if cookiecutter.heroku_app_name | length %}
whitenoise = ">=6.7.0" #for heroku serving static files for admin
{% else %}

{%  endif %}


[tool.poetry.dev-dependencies]

pytest = "^8.4.1"
ruff = "^0.12.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

# To never enforce `E501` (line length violations) uncomment the next line
# ignore = ["E501"]
