[tool.poetry]
name = "{{cookiecutter.project_name|replace('_','-')}}"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">={{cookiecutter.python_version}},<{{cookiecutter.__max_python_version}}"
Django = "^6.0.1"
django-configurations = "^2.5.1"
dj-database-url = "^3.1.0"
djangorestframework = "^3.16.1"
django-filter = "^25.2"
django-extensions = "^4.1"
django-import-export = "^4.4.0"
django-storages = "^1.14.6"
Pillow = "^12.1.0"
django-cors-headers = "^4.9.0"
django-querycount = "^0.8.3"
gunicorn = "^24.1.1"
djangorestframework-simplejwt = "^5.5.1"
psycopg = "^3.3.2"
drf-nested-routers = "^0.95.0"
drf-spectacular = "^0.29.0"
boto3 = ">=1.42.36"

{%  if cookiecutter.heroku_app_name | length %}
whitenoise = ">=6.10.0" #for heroku serving static files for admin
{% else %}

{%  endif %}


[tool.poetry.dev-dependencies]

pytest = "^9.0.2"
ruff = "^0.14.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

# To never enforce `E501` (line length violations) uncomment the next line
# ignore = ["E501"]
